GS-11674 Menu Under School Chooser module - z-index issue - corrected

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -3766,9 +3766,9 @@ body.cobranded #pageGS {
     width: 328px;
     padding-left: 2px;
     overflow: hidden;
-    *z-index: 0;
+    z-index: 0;
     _z-index: 1;
-    _position: relative;
+    position: relative;
     _zoom: 1;
 }
 
